Fix removable devices mounting in Kickoff

use openItem instead of openUrl
patch by Konrad Materka

REVIEW:123426
BUG:346002